--- a/hdd-fan-control.config
+++ b/hdd-fan-control.config
@@ -1,8 +1,10 @@
 [Device]
-Harddisk=/dev/sda
+Harddisk=/dev/sdb
+Harddisk Reference Option=y
+Harddisk Reference=/dev/sda
 Minimum Temperature=25
 Maximum Temperature=38
-PWM Device=/sys/class/hwmon/hwmon3/device/pwm1
+PWM Device=/sys/class/hwmon/hwmon3/device/pwm3
 Minimum PWM=60
 Fan Start PWM=70
 Maximum PWM=255
