--- a/hdd-fan-control.config
+++ b/hdd-fan-control.config
@@ -2,6 +2,7 @@
 Harddisk=/dev/sdb
 Harddisk Reference Option=y
 Harddisk Reference=/dev/sda
+Standby Value=standby
 Minimum Temperature=25
 Maximum Temperature=38
 PWM Device=/sys/class/hwmon/hwmon3/device/pwm3
